fix: modal scrollbar hidden and working fine, home office hotel colors set.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -34,6 +34,17 @@
 *, *::before, *::after {
 	font-family: 'GTWalsheim';
 }
+@layer utilities {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+}
 
 .input-float {
 	@apply block relative h-[3.75rem];
